# STM32U5xx_HAL_Driver-integration

./: AHBPrescTable.cpp  APBPrescTable.cpp  CMakeLists.txt  HAL_Delay.cpp  HAL_GetTick.cpp  MSIRangeTable.cpp  SystemCoreClock.cpp  stm32u5xx_hal_conf.h.in
include/: stm32u5xx.h
